# connes-cvs-

./: .gitignore  CHANGELOG.md  CITATION.cff  ERRATA.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
_benchmarks/: baseline_benchmark.py
benchmarks/: AB_VERIFIED_2026-04-14.md  README.md  win1_benchmark.py  win1_pool_benchmark.py
connes_cvs/: README.md  __init__.py  kernels.py  operator.py  sweep.py
data/: README.md  results_14pt_T800.json  results_15pt_T800.json
data/c100/: README.md  c100_N120_dps560_gamma_extraction.json  c100_N150_dps1000_gamma_extraction.json  c100_N160_dps560_gamma_extraction.json  c100_N250_dps500_gamma_extraction.json  results_c100_N100_T800_dps500_v020.json  results_c100_N150_T800_dps1000_v020.json  results_c100_N150_T800_dps500_v020.json  results_c100_N200_T800_dps500_v020.json  results_c100_N250_T800_dps500_v020.json  results_c67_N150_T800_dps500_v020.json  richardson_n_extrapolation.json
examples/: README.md  basic_compute.py  c100_aitken_check.py  make_fig10_c100_gamma_digits.py  make_fig9_c100_aitken.py  make_legacy_figures.py
guinand_weil_dictionary_tail_order/: CLAIM_TRACE_AUDIT.md  LICENSE-PAPER-CC-BY-4.0.txt  MANIFEST_RELEASE.txt  NOVELTY_BOUNDARY_AUDIT.md  README.md  SHA256SUMS  VERIFICATION_REPORT.md  arb_ldlt_certify.py  arch_tail_budget.py  arch_tail_exact_asymptotic.py  arch_tail_exact_vs_asymptotic.json  arch_tail_order_check.json  arch_tail_stress_ladder.json  audit_full_matrix_source_quotient.py  audit_kernel_span_rank.py  audit_pole_neutral_survival.py  eigenflow_c13N4.json  exact_series_audit.json  full_matrix_source_quotient_audit.json  kernel_span_rank_audit.json  main.bbl  main.bib  make_figures.py  novelty_refresh_20260625_202712.json  pole_neutral_survival_audit.json  requirements.txt  threeroute_c29N6_generic.json  threeroute_c29N6_poleneutral.json  verify_arch_tail_order.py  verify_dictionary_threeroute.py  verify_finite_dictionary.py
matrix_von_mangoldt_measure/: README.md  VERIFICATION.md
matrix_von_mangoldt_measure/artifacts/: canonical_scale_audit.json  coincidence_readout_audit.json  elevations_audit.json  event_prony_reconstruction_audit.json  rank_one_jump_audit.json
matrix_von_mangoldt_measure/scripts/: check_canonical_scale.py  check_coincidence_readout.py  check_event_jet_largeN.py  check_event_jet_recurrence.py  check_event_prony_reconstruction.py  check_spectral_barrier_jump.py  check_universal_jet.py
matrix_von_mangoldt_measure/source/: main.bib  main.tex
papers/: README.md
papers/1_high_precision_riemann_zeros/: README.md
papers/2_guinand_weil_dictionary_tail_order/: README.md  SHA256SUMS  VERIFICATION.md
papers/2_guinand_weil_dictionary_tail_order/artifacts/: arch_tail_budget_c100_N200_T800.json  arch_tail_dt_bridge_audit.json  c100_N200_arb_ldlt_prec9000_provenance.json  threeroute_c13N4_package.json  zero_side_values.json  zeta_zeros_512_dps30.json
papers/2_guinand_weil_dictionary_tail_order/audit/: CLAIM_TRACE_AUDIT.md  NOVELTY_BOUNDARY_AUDIT.md
papers/2_guinand_weil_dictionary_tail_order/scripts/: arch_tail_stress_ladder.py  audit_arch_tail_dt_bridge.py  audit_exact_series_identity.py  verify_zero_side.py
papers/2_guinand_weil_dictionary_tail_order/source/: main.tex
papers/3_matrix_von_mangoldt_measure/: README.md  SHA256SUMS  requirements.txt
papers/3_matrix_von_mangoldt_measure/artifacts/: dirichlet_readout_audit.json  event_jet_determinant_audit.json  event_jet_largeN_audit.json  event_jet_recurrence_audit.json  source_quotient_transport_audit.json  spectral_barrier_jump_audit.json  uncertainty_ceiling_audit.json  universal_jet_audit.json
papers/3_matrix_von_mangoldt_measure/figures/: make_figures.py
papers/3_matrix_von_mangoldt_measure/scripts/: check_dirichlet_readout.py  (+5 more)
tests/: README.md  test_c13_regression.py  test_matrix_microopt_v0_2_0.py
(+1 files in other folders)
